http2-json-streaming/spring-boot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-http2
  labels:
    app: springboot-http2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-http2
  template:
    metadata:
      labels:
        app: springboot-http2
    spec:
      containers:
      - name: springboot
        image: kwonghung/spring-http2-json-streaming-poc:latest
        ports:
        - containerPort: 8080
        - containerPort: 8443
