http2-json-streaming/spring-boot-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-http2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: springboot-http2.hung.org.hk
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-http2
          servicePort: 80
